--- a/intl.zh-CN/新功能发布记录/新功能发布记录.md
+++ b/intl.zh-CN/新功能发布记录/新功能发布记录.md
@@ -4,19 +4,22 @@
 
 |发布时间|动态说明|影响的版本|相关文档|
 |----|----|-----|----|
-|2019-07-31|云安全中心支持容器安全威胁检测功能。|企业版|[设置](../../../../intl.zh-CN/用户指南/设置/设置.md#)|
-|2019-07-26|设置页面的通知功能新增AccessKey泄露情报和云安全配置检查两项。|基础版、高级版、企业版|[通知](../../../../intl.zh-CN/用户指南/设置/通知.md#)|
-|2019-07-16|开启安全日报功能从设置页面下线。|高级版、企业版|[设置](../../../../intl.zh-CN/用户指南/设置/设置.md#)|
-|2019-06-20|应急漏洞功能优化，支持展示应急漏洞修复进度。|企业版|[应急漏洞](../../../../intl.zh-CN/用户指南/漏洞修复/应急漏洞.md#)|
-|2019-06-19|云平台最佳实践功能更名为**云产品配置检查**。|基础版、高级版、企业版|[云平台配置检查](../../../../intl.zh-CN/用户指南/云平台配置检查.md#)|
-|2019-06-19|安全报告上线，通过自定义报告内容、报告展示的数据类型和接收人邮箱地址，实现安全报告的自定义，更好地满足您对于您资产安全状况数据的需求|高级版、企业版|[安全报告](../../../../intl.zh-CN/用户指南/安全报告.md#)|
-|2019-06-16|设置页面全新改版，登录IP拦截加白功能从设置页面下线。|基础版、高级版、企业版|[设置](../../../../intl.zh-CN/用户指南/设置/设置.md#)|
-|2019-06-05|支持应用漏洞检测功能。|企业版|[应用漏洞](../../../../intl.zh-CN/用户指南/漏洞修复/应用漏洞.md#)|
-|2019-05-21|网页防篡改功能升级，支持查看防护总览信息、支持目录防护黑名单和白名单模式。|高级版、企业版|[开启网页防篡改保护](../../../../intl.zh-CN/用户指南/网页防篡改/开启网页防篡改保护.md#)|
+|2019-08-08|云安全中心上线RDS SQL注入检测功能|企业版|-|
+|2019-08-02|**AK和账密泄露检测**页面全新改版为**AK泄露检测**。|企业版|[AK泄露检测](../../../../intl.zh-CN/威胁检测/AK泄露检测.md#)|
+|2019-08-01|**资产管理**页面全新改版为**资产中心**。|基础版、高级版、企业版|[资产中心](../../../../intl.zh-CN/资产管理/资产中心.md#)|
+|2019-07-31|云安全中心支持容器安全威胁检测功能。|企业版|[设置](../../../../intl.zh-CN/安全运营/设置/设置.md#)|
+|2019-07-26|设置页面的通知功能新增AccessKey泄露情报和云安全配置检查两项。|基础版、高级版、企业版|[通知](../../../../intl.zh-CN/安全运营/设置/通知.md#)|
+|2019-07-16|开启安全日报功能从设置页面下线。|高级版、企业版|[设置](../../../../intl.zh-CN/安全运营/设置/设置.md#)|
+|2019-06-20|应急漏洞功能优化，支持展示应急漏洞修复进度。|企业版|[应急漏洞](../../../../intl.zh-CN/安全防范/漏洞修复/应急漏洞.md#)|
+|2019-06-19|云平台最佳实践功能更名为**云产品配置检查**。|基础版、高级版、企业版|[云平台配置检查](../../../../intl.zh-CN/安全防范/云平台配置检查.md#)|
+|2019-06-19|安全报告上线，通过自定义报告内容、报告展示的数据类型和接收人邮箱地址，实现安全报告的自定义，更好地满足您对于您资产安全状况数据的需求|高级版、企业版|[安全报告](../../../../intl.zh-CN/安全运营/安全报告.md#)|
+|2019-06-16|设置页面全新改版，登录IP拦截加白功能从设置页面下线。|基础版、高级版、企业版|[设置](../../../../intl.zh-CN/安全运营/设置/设置.md#)|
+|2019-06-05|支持应用漏洞检测功能。|企业版|[应用漏洞](../../../../intl.zh-CN/安全防范/漏洞修复/应用漏洞.md#)|
+|2019-05-21|网页防篡改功能升级，支持查看防护总览信息、支持目录防护黑名单和白名单模式。|高级版、企业版|[开启网页防篡改保护](../../../../intl.zh-CN/主动防御/网页防篡改/开启网页防篡改保护.md#)|
 |2019-03-31|态势感知全新升级为云安全中心。|基础版、高级版、企业版|[什么是云安全中心](../../../../intl.zh-CN/产品简介/什么是云安全中心.md#)|
-|2019-03-30|支持漏洞关联进程。|高级版、企业版|[Linux软件漏洞](../../../../intl.zh-CN/用户指南/漏洞修复/Linux软件漏洞.md#)|
+|2019-03-30|支持漏洞关联进程。|高级版、企业版|[Linux软件漏洞](../../../../intl.zh-CN/安全防范/漏洞修复/Linux软件漏洞.md#)|
 |2018-12-28|攻击、访问、威胁功能下线。|企业版|-|
 |2018-12-20|基础版威胁检测能力只支持**异常登录**和**其他-DDoS**类型安全告警；企业版不受影响。|基础版|[功能特性说明](intl.zh-CN/产品简介/功能特性.md#)|
-|2018-12-15|支持攻击分析和溯源。|企业版|[攻击分析](../../../../intl.zh-CN/用户指南/攻击分析.md#)|
-|2018-12-10|支持告警自动化关联分析。|企业版|[告警自动化关联分析](../../../../intl.zh-CN/用户指南/安全告警处理/告警自动化关联分析.md#)|
+|2018-12-15|支持攻击分析和溯源。|企业版|[攻击分析](../../../../intl.zh-CN/威胁检测/攻击分析.md#)|
+|2018-12-10|支持告警自动化关联分析。|企业版|[告警自动化关联分析](../../../../intl.zh-CN/威胁检测/安全告警处理/告警自动化关联分析.md#)|
 
