--- a/intl.zh-CN/威胁检测/安全告警处理/安全告警类型概述.md
+++ b/intl.zh-CN/威胁检测/安全告警处理/安全告警类型概述.md
@@ -4,26 +4,9 @@
 
 云安全中心支持对您已开启的告警防御能力提供总览，帮助您快速了解已开启和未开启的防御项目。您可在云安全中心控制台安全告警处理页面，查看已开启和未开启的防御项目。
 
-![安全告警处理](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13637/156566059851001_zh-CN.png)
+![已开启防御和未开启防御的项目](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13637/156587804555771_zh-CN.png)
 
-防御项目包含以下类型。
-
--   异常登录
--   异常账号
--   异常事件
--   异常网络连接
--   进程异常行为
--   持久化后门
--   网站后门
-
--   敏感文件篡改
--   网页防篡改
--   恶意进程（云查杀）
--   精准防御（病毒自动查杀）
--   应用入侵事件
--   应用白名单
--   云产品威胁检测
--   Web应用威胁检测
+防御项目包含的内容参见[安全告警类型](#section_txs_bsj_zdb)。
 
 除应用白名单和网页防篡改告警类型以外，云安全中心默认为用户开启所有的告警事件防御能力。
 
@@ -33,7 +16,7 @@
 -   网页防篡是云安全中心的增值服务，需要您单独购买开通后才会开启网页防篡改的防御。网页防篡改为高级版和企业版功能，基础版不支持该功能。网页防篡改详细操作参见网页防篡改[开通服务](../intl.zh-CN/主动防御/网页防篡改/开通服务.md#)。
 -   云产品威胁检测为企业版功能，企业版自动开启防御；高级版需要升级至企业版后才能自动开启防御。
 
-**安全告警类型** 
+## 安全告警类型 {#section_txs_bsj_zdb .section}
 
 **说明：** 
 
