--- a/cn.zh-CN/威胁检测/安全告警处理/安全告警类型概述.md
+++ b/cn.zh-CN/威胁检测/安全告警处理/安全告警类型概述.md
@@ -4,7 +4,7 @@
 
 云安全中心支持对您已开启的告警防御能力提供总览，帮助您快速了解已开启和未开启的防御项目。您可在云安全中心控制台安全告警处理页面，查看已开启和未开启的防御项目。
 
-![已开启防御和未开启防御的项目](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13637/156587804555771_zh-CN.png)
+![已开启防御和未开启防御的项目](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13637/156618040455771_zh-CN.png)
 
 防御项目包含的内容参见[安全告警类型](#section_txs_bsj_zdb)。
 
@@ -45,5 +45,8 @@
 |**云产品威胁检测**|云安全中心检测到您购买的其他阿里云产品存在的威胁。|
 |**精准防御**|开启**病毒查杀**提供精准防御能力，可对主流勒索病毒、DDOS木马、挖矿和木马程序、恶意程序、后门程序和蠕虫病毒等类型进行防御。|
 |**应用入侵事件**|通过系统的应用组件入侵服务器的告警事件。|
+|**持久化后门**|检测服务器上存在的可疑计划任务，对可能被攻击者用于持久入侵用户机器的威胁进行告警提示。|
+|**应用白名单**|通过将需要重点防御的服务器应用在白名单策略中，检测服务器中是否存在可疑或恶意进程，并对不在白名单中的进程进行告警提示。|
+|**Web应用威胁检测**|云安全中心对通过Web应用入侵的行为进行检测告警。|
 |**其他**|DDOS流量攻击等网络入侵行为。|
 
