--- a/cn.zh-CN/威胁检测/安全告警处理/查看和处理告警事件.md
+++ b/cn.zh-CN/威胁检测/安全告警处理/查看和处理告警事件.md
@@ -4,25 +4,29 @@
 
 ## 操作步骤 {#section_wxs_bsj_zdb .section}
 
-云安全中心支持对告警事件进行批量处理。
-
 1.  登录[云安全中心控制台](https://yundun.console.aliyun.com/?p=sas)。
-2.  在左侧导航栏单击**威胁检测** \> **安全告警处理**。
-3.  在**安全告警处理**列表中查看或搜索所有检测到的入侵和威胁告警及其详细信息。
+2.  在左侧导航栏，单击**威胁检测** \> **安全告警处理**。
+3.  在**安全告警处理**列表中查看或搜索所有检测到的入侵和威胁告警及其详细信息。 
 
     您也可以使用搜索和页签筛选功能快速定位到特定事件。例如，您可以通过输入告警或资产名称、筛选告警严重等级、事件状态或告警类型来搜索相关的告警事件。
 
-    ![云安全中心安全告警处理页面](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/61174/156591983355821_zh-CN.png)
+    ![云安全中心安全告警处理页面](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/61174/156618056155821_zh-CN.png)
 
     在**安全告警处理**页面中单击告警事件的名称，打开该告警事件的详情页面，可以查看其详情和该告警的自动化关联信息，帮助您更便捷和全面地分析威胁事件，快速定位攻击来源地址和攻击行为的路径分析。有关告警自动化关联的操作，参见[告警自动化关联分析](intl.zh-CN/威胁检测/安全告警处理/告警自动化关联分析.md#)和[查看告警溯源和排查方案](intl.zh-CN/威胁检测/安全告警处理/查看告警溯源和排查方案.md#)。
 
-4.  在**安全告警处理**页面单击**处理**，根据您的需求对不同告警事件执行相应处理。
+4.  在**安全告警处理**页面单击**处理**，根据您的需求对不同告警事件执行相应处理。 
 
-    ![云安全中心告警处理页面](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/61174/156591983355822_zh-CN.png)
+    ![云安全中心告警处理页面](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/61174/156618056155822_zh-CN.png)
 
-    -   **病毒查杀**：仅限对**网站后门-发现后门（Webshell）文件**和**恶意进程（云查杀）**执行结束进程或隔离的操作。确认告警信息后，单击该操作可将网站后门文件加入文件隔离箱。被隔离的文件将无法对主机造成威胁，详细信息参见[文件隔离箱](intl.zh-CN/威胁检测/安全告警处理/文件隔离箱.md#)。
+    -   **病毒查杀**/**隔离**：仅限对**网站后门-发现后门（Webshell）文件**或**恶意进程（云查杀）**执行结束进程、阻断或隔离的操作。确认告警信息后，单击该操作可将网站后门文件加入文件隔离箱。被隔离的文件将无法对主机造成威胁，详细信息参见[文件隔离箱](intl.zh-CN/威胁检测/安全告警处理/文件隔离箱.md#)。
 
         **说明：** 被成功隔离的文件在30天内可执行一键恢复，过期后系统将自动清除该文件。
+
+    -   **阻断**：仅限对**恶意进程（云查杀）-访问恶意IP**执行阻断的操作。
+
+        您可以查看处理详情并设置**规则有效期**。
+
+        ![阻断](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/61174/156618056256031_zh-CN.png)
 
     -   **忽略**：忽略本次告警，该告警状态将变为**已处理**，后续云安全中心不会再对该事件进行告警。
     -   **加白名单**：如果告警为误报，您可以将本次告警加入白名单。告警加入白名单后该告警状态将变为**已处理**，后续云安全中心不会再对该事件进行告警。您可以在**已处理**列表中定位到该事件对其进行**取消白名单**的操作。
