--- a/cn.zh-CN/产品简介/限制说明.md
+++ b/cn.zh-CN/产品简介/限制说明.md
@@ -1,8 +1,16 @@
 # 限制说明 {#concept_jxd_l4z_kfb .concept}
 
-云安全中心的日志库属于专属日志库。
+本文档介绍了云安全中心使用的限制说明。
+
+## 安全威胁防御限制说明 {#section_279_7bx_3hn .section}
+
+云安全中心支持安全告警实时检测与处理、漏洞检测与一键修复、攻击分析、云平台安全配置检查等功能，结合告警关联分析和攻击自动化溯源，帮助您全面加固系统和资产的安全防线。在云安全中心提供的防御能力以外，建议您也时时更新服务器安全系统补丁、配合使用云防火墙、Web应用防火墙等产品缩小网络安全威胁的攻击范围，实时预防，不让黑客有任何可乘之机。
+
+**说明：** 由于网络攻击手段、病毒样本在不断的演变，实际的业务环境也有不同差异，因此无法保证能实时检测防御所有的未知威胁，建议您基于安全告警处理、漏洞、基线检查、云平台配置检查等安全能力，提升整体安全防线，预防黑客入侵和盗取或破坏业务数据。
 
 ## 日志库限制说明 {#section_ecs_2fy_kfb .section}
+
+云安全中心的日志库属于专属日志库。
 
 -   您无法通过API/SDK等方式在数据库中写入数据，或者修改日志库的属性（例如存储周期等）。
 -   其他日志库功能，例如查询、统计、报警、流式消费等均支持与一般日志库无差别。
