--- a/cn.zh-CN/威胁检测/安全告警处理/病毒云查杀.md
+++ b/cn.zh-CN/威胁检测/安全告警处理/病毒云查杀.md
@@ -41,13 +41,19 @@
 
 **检测**
 
-![选择检测类型](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/18946/156618097810818_zh-CN.png)
+![选择检测类型](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/18946/156700292910818_zh-CN.png)
 
 **隔离**
 
-![隔离](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/18946/156618097910819_zh-CN.png)
+![隔离](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/18946/156700293010819_zh-CN.png)
 
 **恢复**
 
-![恢复](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/18946/156618097910820_zh-CN.png)
+![恢复](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/18946/156700293010820_zh-CN.png)
+
+## 安全威胁防御限制说明 { .section}
+
+云安全中心支持安全告警实时检测与处理、漏洞检测与一键修复、攻击分析、云平台安全配置检查等功能，结合告警关联分析和攻击自动化溯源，帮助您全面加固系统和资产的安全防线。在云安全中心提供的防御能力以外，建议您也时时更新服务器安全系统补丁、配合使用云防火墙、Web应用防火墙等产品缩小网络安全威胁的攻击范围，实时预防，不让黑客有任何可乘之机。
+
+**说明：** 由于网络攻击手段、病毒样本在不断的演变，实际的业务环境也有不同差异，因此无法保证能实时检测防御所有的未知威胁，建议您基于安全告警处理、漏洞、基线检查、云平台配置检查等安全能力，提升整体安全防线，预防黑客入侵和盗取或破坏业务数据。
 
