--- a/intl.zh-CN/产品简介/功能特性.md
+++ b/intl.zh-CN/产品简介/功能特性.md
@@ -17,8 +17,8 @@
 -   √：表示包含在服务范围中。
 -   增值：表示需要在购买服务时单独勾选，才包含在服务范围中。
 
-|功能|功能项|功能详情|基础版|高级版|企业版|
-|--|---|----|---|---|---|
+|能力分类|功能模块|功能详情|基础版|高级版|企业版|
+|----|----|----|---|---|---|
 |安全告警|异常登录检测|【基础登录检测】 -   【非常用登录地登录】系统自动记录ECS常用登录地（支持手动添加），若在非常用登录地进行登录，则触发告警。
 -   【暴力破解】检测ECS在多次尝试登录失败后最终登录成功的情况，这类情形很有可能是密码被暴力破解。
 
@@ -131,4 +131,10 @@
 |通知|对告警通知进行自定义设置，通过告警设置调整云安全中心向您发送告警通知的方式和要关注的风险等级。|X|√|√|
 |安全日报|对安全日报进行配置。开启安全日报后，云安全中心以邮件形式向您指定的收件人发送每日安全统计信息。|X|√|√|
 |安装/卸载插件|支持Agent插件的安装和卸载。|X|√|√|
+
+## 安全威胁防御限制说明 { .section}
+
+云安全中心支持安全告警实时检测与处理、漏洞检测与一键修复、攻击分析、云平台安全配置检查等功能，结合告警关联分析和攻击自动化溯源，帮助您全面加固系统和资产的安全防线。在云安全中心提供的防御能力以外，建议您也时时更新服务器安全系统补丁、配合使用云防火墙、Web应用防火墙等产品缩小网络安全威胁的攻击范围，实时预防，不让黑客有任何可乘之机。
+
+**说明：** 由于网络攻击手段、病毒样本在不断的演变，实际的业务环境也有不同差异，因此无法保证能实时检测防御所有的未知威胁，建议您基于安全告警处理、漏洞、基线检查、云平台配置检查等安全能力，提升整体安全防线，预防黑客入侵和盗取或破坏业务数据。
 
