--- a/cn.zh-CN/产品简介/功能特性.md
+++ b/cn.zh-CN/产品简介/功能特性.md
@@ -132,7 +132,7 @@
 |安全日报|对安全日报进行配置。开启安全日报后，云安全中心以邮件形式向您指定的收件人发送每日安全统计信息。|X|√|√|
 |安装/卸载插件|支持Agent插件的安装和卸载。|X|√|√|
 
-## 安全威胁防御限制说明 { .section}
+## 安全威胁防御限制说明 {#section_05u_syj_o7p .section}
 
 云安全中心支持安全告警实时检测与处理、漏洞检测与一键修复、攻击分析、云平台安全配置检查等功能，结合告警关联分析和攻击自动化溯源，帮助您全面加固系统和资产的安全防线。在云安全中心提供的防御能力以外，建议您也时时更新服务器安全系统补丁、配合使用云防火墙、Web应用防火墙等产品缩小网络安全威胁的攻击范围，实时预防，不让黑客有任何可乘之机。
 
