--- a/intl.zh-CN/常见问题/云安全中心常见问题概览.md
+++ b/intl.zh-CN/常见问题/云安全中心常见问题概览.md
@@ -34,7 +34,7 @@
 
 [虚拟机和轻量级服务器是否支持安装Agent？](intl.zh-CN/常见问题/常见问题隐藏目录/虚拟机和轻量级服务器是否支持安装Agent？.md#)
 
-[如何解绑（释放）资产？](intl.zh-CN/常见问题/常见问题隐藏目录/如何解绑（释放）资产？.md#)
+[如何解绑（释放）资产？](intl.zh-CN/常见问题/常见问题隐藏目录/如何解绑（释放）非阿里云资产？.md#)
 
 ## 主机异常相关问题 {#section_5am_kp7_l50 .section}
 
@@ -71,6 +71,8 @@
 [云安全中心提示“异常网络连接-主动连接恶意下载源”该如何处理？](intl.zh-CN/常见问题/常见问题隐藏目录/云安全中心提示“异常网络连接-主动连接恶意下载源”该如何处理？.md#)
 
 [云安全中心提示“异常网络链接-访问恶意域名”该如何处理？](intl.zh-CN/常见问题/常见问题隐藏目录/云安全中心提示“异常网络链接-访问恶意域名”该如何处理？.md#)
+
+[云安全中心如何检测和告警异常登录？](intl.zh-CN/常见问题/常见问题隐藏目录/云安全中心如何检测和告警异常登录？.md#)
 
 ## 异常登录相关问题 {#section_dpg_5gj_ygx .section}
 
