--- a/cn.zh-CN/威胁检测/安全告警处理/安全告警类型概述.md
+++ b/cn.zh-CN/威胁检测/安全告警处理/安全告警类型概述.md
@@ -4,7 +4,7 @@
 
 云安全中心支持对您已开启的告警防御能力提供总览，帮助您快速了解已开启和未开启的防御项目。您可在云安全中心控制台安全告警处理页面，查看已开启和未开启的防御项目。
 
-![已开启防御和未开启防御的项目](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13637/156618040455771_zh-CN.png)
+![已开启防御和未开启防御的项目](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13637/156748170355771_zh-CN.png)
 
 防御项目包含的内容参见[安全告警类型](#section_txs_bsj_zdb)。
 
@@ -13,7 +13,7 @@
 **说明：** 
 
 -   基础版用户默认只开启**异常登录**的防御能力。如需开通其他防御能力，需**升级**到高级版或企业版。有关升级的内容，参见[服务续费与升级](../intl.zh-CN/产品定价/服务续费与升级.md#)。
--   网页防篡是云安全中心的增值服务，需要您单独购买开通后才会开启网页防篡改的防御。网页防篡改为高级版和企业版功能，基础版不支持该功能。网页防篡改详细操作参见网页防篡改[开通服务](../intl.zh-CN/主动防御/网页防篡改/开通服务.md#)。
+-   网页防篡改是云安全中心的增值服务，需要您单独购买开通后才会开启网页防篡改的防御。网页防篡改为高级版和企业版功能，基础版不支持该功能。网页防篡改详细操作参见网页防篡改[开通服务](../intl.zh-CN/主动防御/网页防篡改/开通服务.md#)。
 -   云产品威胁检测为企业版功能，企业版自动开启防御；高级版需要升级至企业版后才能自动开启防御。
 
 ## 安全告警类型 {#section_txs_bsj_zdb .section}
@@ -27,7 +27,7 @@
 |----|----|
 |**网页防篡改**|实时监控网站目录并通过备份恢复被篡改的文件或目录，保障重要系统的网站信息不被恶意篡改，防止出现挂马、黑链、非法植入恐怖威胁、色情等内容。 详情参见[网页防篡改](intl.zh-CN/主动防御/网页防篡改/概述.md#)。
 
- **说明：** 网页防篡改是云安全中心提供给企业版用户的增值服务，企业版用户需先购买和开通网页防篡改才能使用该能。基础版和高级版不支持网页防篡改功能。
+ **说明：** 网页防篡改是云安全中心的增值服务，需要您单独购买开通后才会开启网页防篡改的防御。网页防篡改为高级版和企业版功能，基础版不支持该功能。
 
  |
 |**进程异常行为**|检测资产中是否存在超出正常执行流程的行为。|
@@ -36,7 +36,7 @@
 -   对发现的木马文件支持隔离、恢复和忽略。
 
  |
-|**异常登录**|检测服务器上的异常登录行为。通过设置合法登录IP、时间及账号，对于例外的登录行为进行告警。支持手动添加和自动更新常用登录地，对指定资产的异地登录行为进行告警。具体可参见[云安全中心如何检测和告警异常登录？](../intl.zh-CN/常见问题/常见问题隐藏目录/云安全中心如何检测和告警异常登录？.md#)|
+|**异常登录**|检测服务器上的异常登录行为。通过设置合法登录IP、时间及账号，对于例外的登录行为进行告警。支持手动添加和自动更新常用登录地，对指定资产的异地登录行为进行告警。具体可参见[云安全中心如何检测和告警异常登录？](../intl.zh-CN/常见问题/常见问题隐藏目录/异常登录相关问题/云安全中心如何检测和告警异常登录？.md#)|
 |**异常事件**|程序运行过程中发生的异常行为。|
 |**敏感文件篡改**|对服务器中的敏感文件进行恶意修改。|
 |**恶意进程（病毒云查杀）**|采用云+端的查杀机制，对服务器进行实时检测，并对检测到的病毒文件提供实时告警。您可通过控制台对病毒程序进行处理。详细信息参见[病毒云查杀](../intl.zh-CN/威胁检测/安全告警处理/病毒云查杀.md#)。|
