--- a/cn.zh-CN/新功能发布记录/新功能发布记录.md
+++ b/cn.zh-CN/新功能发布记录/新功能发布记录.md
@@ -4,7 +4,8 @@
 
 |发布时间|动态说明|影响的版本|相关文档|
 |----|----|-----|----|
-|2019-08-08|云安全中心上线RDS SQL注入检测功能|企业版|-|
+|2019-08-30|云安全中心全新发布2019年上半年云上企业安全指南。阿里云基于对云安全中心检测到的威胁情况进行了详细地分析，为您的云上安全建设提供建议，帮助您打造更健全的云上安全体系。|-|[2019年上半年云上企业安全指南](https://files.alicdn.com/tpsservice/d371eae34077a310a8b92f2a3fe94756.pdf?spm=5176.13288491.1389903.2.2d8b5b35TowEIH&file=d371eae34077a310a8b92f2a3fe94756.pdf)|
+|2019-08-08|云安全中心上线RDS SQL注入检测功能|企业版|[RDS SQL注入威胁检测](../../../../intl.zh-CN/威胁检测/RDS SQL注入威胁检测.md#)|
 |2019-08-02|**AK和账密泄露检测**页面全新改版为**AK泄露检测**。|企业版|[AK泄露检测](../../../../intl.zh-CN/威胁检测/AK泄露检测.md#)|
 |2019-08-01|**资产管理**页面全新改版为**资产中心**。|基础版、高级版、企业版|[资产中心](../../../../intl.zh-CN/资产管理/资产中心.md#)|
 |2019-07-31|云安全中心支持容器安全威胁检测功能。|企业版|[设置](../../../../intl.zh-CN/安全运营/设置/设置.md#)|
