--- a/cn.zh-CN/产品简介/什么是云安全中心.md
+++ b/cn.zh-CN/产品简介/什么是云安全中心.md
@@ -1,6 +1,6 @@
 # 什么是云安全中心 {#concept_bjv_y5w_ydb .concept}
 
-云安全中心是阿里云云上安全监控和诊断服务，面向云上资产提供安全事件检测、漏洞扫描、基线配置核查等服务。云安全中心结合了阿里自主研发的大数据和机器学习算法，通过多引擎查杀帮助您实时全面了解和有效处理服务器的安全隐患，并实现对云上资产的集中安全管理。
+云安全中心是一个实时识别、分析、预警安全威胁的统一安全管理系统，通过防勒索、防病毒、防篡改、合规检查等安全能力，帮助用户实现威胁检测、响应、溯源的自动化安全运营闭环，保护云上资产和本地主机并满足监管合规要求。
 
 云安全中心帮助您收集并呈现10余种类型的日志和云上资产指纹，并结和网络实体威胁情报进行安全态势分析，扩大安全可见性。
 
@@ -28,4 +28,8 @@
 
 
   
+
+## 参考文档 {#section_oyx_38a_oin .section}
+
+云安全中心全新发布2019年上半年云上企业安全指南。阿里云基于对云安全中心检测到的威胁情况进行了详细地分析，为您的云上安全建设提供建议，帮助您打造更健全的云上安全体系。详细内容参见[云上企业安全指南](https://files.alicdn.com/tpsservice/d371eae34077a310a8b92f2a3fe94756.pdf?spm=5176.13288491.1389903.2.2d8b5b35TowEIH&file=d371eae34077a310a8b92f2a3fe94756.pdf)。
 
