--- a/intl.zh-CN/新功能发布记录/云安全中心文档概览.md
+++ b/intl.zh-CN/新功能发布记录/云安全中心文档概览.md
@@ -10,83 +10,134 @@
 
 ## 查看安全概览信息 {#section_jtr_yuc_nmu .section}
 
-[总览](../../../../intl.zh-CN/用户指南/总览.md#)
+[总览](../../../../intl.zh-CN/控制台总览/总览.md#)
 
 ## 查看资产保护状态 {#section_em3_k11_2hb .section}
 
-[资产管理](../../../../intl.zh-CN/用户指南/资产管理.md#)
+[资产中心](../../../../intl.zh-CN/资产管理/资产中心.md#)
+
+[查看服务器安全状态](../../../../intl.zh-CN/资产管理/查看服务器安全状态.md#)
+
+[查看网站安全状态](../../../../intl.zh-CN/资产管理/查看网站安全状态.md#)
+
+[查看云产品安全状态](../../../../intl.zh-CN/资产管理/查看云产品安全状态.md#)
+
+[开启和关闭服务器保护状态](../../../../intl.zh-CN/资产管理/开启和关闭服务器保护状态.md#)
+
+[一键安全检查](../../../../intl.zh-CN/资产管理/一键安全检查.md#)
+
+[管理资产分组](../../../../intl.zh-CN/资产管理/管理资产分组.md#)
+
+[管理资产标签](../../../../intl.zh-CN/资产管理/管理资产标签.md#)
+
+[删除非阿里云机器](../../../../intl.zh-CN/资产管理/删除非阿里云机器.md#)
+
+[管理单个资产](../../../../intl.zh-CN/资产管理/管理单个资产.md#)
 
 ## 查看与处理告警事件 {#section_aqk_l11_2hb .section}
 
--   [安全告警类型](intl.zh-CN/用户指南/安全告警处理/安全告警类型概述.md#)
--   [查看和处理/批量处理告警事件](intl.zh-CN/用户指南/安全告警处理/查看和处理告警事件.md#)
--   [告警自动化关联分析](intl.zh-CN/用户指南/安全告警处理/告警自动化关联分析.md#)
--   [查看告警溯源和排查方案](intl.zh-CN/用户指南/安全告警处理/查看告警溯源和排查方案.md#)
--   [文件隔离箱](intl.zh-CN/用户指南/安全告警处理/文件隔离箱.md#)
--   [一键导出告警事件列表](intl.zh-CN/用户指南/安全告警处理/一键导出事件列表.md#)
--   [病毒云查杀](intl.zh-CN/用户指南/安全告警处理/病毒云查杀.md#)
--   [安全告警设置](../../../../intl.zh-CN/用户指南/安全告警处理/安全告警设置.md#)
+[安全告警类型概述](../../../../intl.zh-CN/威胁检测/安全告警处理/安全告警类型概述.md#)
+
+[查看和处理告警事件](../../../../intl.zh-CN/威胁检测/安全告警处理/查看和处理告警事件.md#)
+
+[告警自动化关联分析](../../../../intl.zh-CN/威胁检测/安全告警处理/告警自动化关联分析.md#)
+
+[查看告警溯源和排查方案](../../../../intl.zh-CN/威胁检测/安全告警处理/查看告警溯源和排查方案.md#)
+
+[文件隔离箱](../../../../intl.zh-CN/威胁检测/安全告警处理/文件隔离箱.md#)
+
+[一键导出事件列表](../../../../intl.zh-CN/威胁检测/安全告警处理/一键导出事件列表.md#)
+
+[安全告警设置](../../../../intl.zh-CN/威胁检测/安全告警处理/安全告警设置.md#)
+
+[病毒云查杀](../../../../intl.zh-CN/威胁检测/安全告警处理/病毒云查杀.md#)
 
 ## 检测与管理漏洞 {#section_q1p_db1_2hb .section}
 
--   [漏洞修复必要性说明](intl.zh-CN/用户指南/漏洞修复/漏洞修复必要性说明.md#)
--   [Linux软件漏洞](intl.zh-CN/用户指南/漏洞修复/Linux软件漏洞.md#)
--   [Windows系统漏洞](intl.zh-CN/用户指南/漏洞修复/Linux软件漏洞.md#)
--   [Web-CMS漏洞](intl.zh-CN/用户指南/漏洞修复/Web-CMS漏洞.md#)
--   [应急漏洞](intl.zh-CN/用户指南/漏洞修复/应急漏洞.md#)
--   [漏洞管理与设置白名单](intl.zh-CN/用户指南/漏洞修复/漏洞管理设置与加白名单.md#)
--   [服务器软件漏洞修复](intl.zh-CN/用户指南/漏洞修复/服务器软件漏洞修复.md#)
+[漏洞修复必要性说明](../../../../intl.zh-CN/安全防范/漏洞修复/漏洞修复必要性说明.md#)
+
+[Linux软件漏洞](../../../../intl.zh-CN/安全防范/漏洞修复/Linux软件漏洞.md#)
+
+[Windows系统漏洞](../../../../intl.zh-CN/安全防范/漏洞修复/Windows系统漏洞.md#)
+
+[Web-CMS漏洞](../../../../intl.zh-CN/安全防范/漏洞修复/Web-CMS漏洞.md#)
+
+[应用漏洞](../../../../intl.zh-CN/安全防范/漏洞修复/应用漏洞.md#)
+
+[应急漏洞](../../../../intl.zh-CN/安全防范/漏洞修复/应急漏洞.md#)
+
+[漏洞管理设置与加白名单](../../../../intl.zh-CN/安全防范/漏洞修复/漏洞管理设置与加白名单.md#)
+
+[服务器软件漏洞修复](../../../../intl.zh-CN/安全防范/漏洞修复/服务器软件漏洞修复.md#)
+
+[漏洞修复优先级排序参考](../../../../intl.zh-CN/安全防范/漏洞修复/漏洞修复优先级排序参考.md#)
 
 ## 检测与查看云产品安全配置 {#section_rxt_5w0_5rn .section}
 
-[云平台配置检查](../../../../intl.zh-CN/用户指南/云平台配置检查.md#)
+[云平台配置检查](../../../../intl.zh-CN/安全防范/云平台配置检查.md#)
 
 ## 配置与执行基线检测 {#section_jnk_2b1_2hb .section}
 
--   [基线检查项目](intl.zh-CN/用户指南/基线检查/基线检查概述.md#)
--   [新增和配置基线检查策略](intl.zh-CN/用户指南/基线检查/新增和配置基线检查策略.md#)
--   [执行基线检测](intl.zh-CN/用户指南/基线检查/执行基线检测.md#)
+[基线检查概述](../../../../intl.zh-CN/安全防范/基线检查/基线检查概述.md#)
+
+[管理基线检查策略](../../../../intl.zh-CN/安全防范/基线检查/管理基线检查策略.md#)
+
+[执行基线检测](../../../../intl.zh-CN/安全防范/基线检查/执行基线检测.md#)
 
 ## 网页防篡改 {#section_c7d_q2v_w6a .section}
 
--   [开通服务](intl.zh-CN/用户指南/网页防篡改/开通服务.md#)
--   [开启网页防篡改保护](intl.zh-CN/用户指南/网页防篡改/开启网页防篡改保护.md#)
--   [扩充授权数](../../../../intl.zh-CN/用户指南/网页防篡改/扩充授权数.md#)
+[网页防篡改概述](../../../../intl.zh-CN/主动防御/网页防篡改/概述.md#)
+
+[开通服务](../../../../intl.zh-CN/主动防御/网页防篡改/开通服务.md#)
+
+[开启网页防篡改保护](../../../../intl.zh-CN/主动防御/网页防篡改/开启网页防篡改保护.md#)
+
+[扩充授权数](../../../../intl.zh-CN/主动防御/网页防篡改/扩充授权数.md#)
 
 ## 分析日志 {#section_hsv_tzr_jox .section}
 
--   [日志分析限制说明](intl.zh-CN/用户指南/日志分析/使用前必读.md#)
--   [开通日志分析服务](intl.zh-CN/用户指南/日志分析/开通日志分析服务.md#)
--   [日志类别及参数说明](../../../../intl.zh-CN/用户指南/日志分析/日志类别及参数说明.md#)
--   [查询实时日志分析](intl.zh-CN/用户指南/日志分析/查询实时日志分析/查询日志.md#) 
-    -   [自定义日志查询与分析](../../../../intl.zh-CN/用户指南/日志分析/查询实时日志分析/自定义日志查询与分析.md#)
-    -   [查看日志的时间分布](../../../../intl.zh-CN/用户指南/日志分析/查询实时日志分析/查看日志的时间分布.md#)
-    -   [查看原始日志](intl.zh-CN/用户指南/日志分析/查询实时日志分析/查看原始日志.md#)
-    -   [查看日志统计图表](intl.zh-CN/用户指南/日志分析/查询实时日志分析/查看统计图表.md#)
-    -   [快速分析](../../../../intl.zh-CN/用户指南/日志分析/查询实时日志分析/快速分析.md#)
-    -   [查询日志](intl.zh-CN/用户指南/日志分析/查询实时日志分析/查询日志.md#)
--   [日志报表仪表盘](intl.zh-CN/用户指南/日志分析/日志报表仪表盘.md#)
--   [查看日志报表](../../../../intl.zh-CN/用户指南/日志分析/查看日志报表.md#)
--   [导出日志](intl.zh-CN/用户指南/日志分析/导出日志.md#)
--   [日志服务高级管理](intl.zh-CN/用户指南/日志分析/高级管理.md#)
+[使用前必读](../../../../intl.zh-CN/调查响应/日志分析/使用前必读.md#)
+
+[开通日志分析服务](../../../../intl.zh-CN/调查响应/日志分析/开通日志分析服务.md#)
+
+[日志类别及参数说明](../../../../intl.zh-CN/调查响应/日志分析/日志类别及参数说明.md#)
+
+[查询实时日志分析](../../../../intl.zh-CN/调查响应/日志分析/查询实时日志分析/查询日志.md#) 
+
+-   [自定义日志查询与分析](../../../../intl.zh-CN/调查响应/日志分析/查询实时日志分析/自定义日志查询与分析.md#)
+-   [查看日志的时间分布](../../../../intl.zh-CN/调查响应/日志分析/查询实时日志分析/查看日志的时间分布.md#)
+-   [查看原始日志](../../../../intl.zh-CN/调查响应/日志分析/查询实时日志分析/查看原始日志.md#)
+-   [查看统计图表](../../../../intl.zh-CN/调查响应/日志分析/查询实时日志分析/查看统计图表.md#)
+-   [快速分析](../../../../intl.zh-CN/调查响应/日志分析/查询实时日志分析/快速分析.md#)
+-   [查询日志](../../../../intl.zh-CN/调查响应/日志分析/查询实时日志分析/查询日志.md#)
+
+[日志报表仪表盘](../../../../intl.zh-CN/调查响应/日志分析/日志报表仪表盘.md#)
+
+[查看日志报表](../../../../intl.zh-CN/调查响应/日志分析/查看日志报表.md#)
+
+[导出日志](../../../../intl.zh-CN/调查响应/日志分析/导出日志.md#)
+
+[高级管理](../../../../intl.zh-CN/调查响应/日志分析/高级管理.md#)
 
 ## 查看安全报告 {#section_uwb_7th_zsc .section}
 
-[安全报告](../../../../intl.zh-CN/用户指南/安全报告.md#)
+[安全报告](../../../../intl.zh-CN/安全运营/安全报告.md#)
 
 ## 查看攻击分析信息 {#section_fdl_2b1_2hb .section}
 
-[攻击分析](../../../../intl.zh-CN/用户指南/攻击分析.md#)
+[攻击分析](../../../../intl.zh-CN/威胁检测/攻击分析.md#)
 
 ## 管理资产指纹 {#section_drd_znk_vzj .section}
 
-[资产指纹](../../../../intl.zh-CN/用户指南/资产指纹.md#)
+[资产指纹调查](../../../../intl.zh-CN/调查响应/资产指纹.md#)
 
 ## 设置 {#section_e5b_tc1_2hb .section}
 
--   [安全配置](intl.zh-CN/用户指南/设置/设置.md#)
--   [安装/卸载Agent插件](intl.zh-CN/用户指南/设置/安装__卸载插件.md#)
--   [告警通知设置](intl.zh-CN/用户指南/设置/通知.md#)
+[安全配置](../../../../intl.zh-CN/安全运营/设置/设置.md#)
+
+[告警通知设置](../../../../intl.zh-CN/安全运营/设置/通知.md#)
+
+[安装/卸载Agent插件](../../../../intl.zh-CN/安全运营/设置/安装__卸载插件.md#)
 
 ## 常见问题 {#section_19v_euq_szn .section}
 
