--- a/intl.zh-CN/产品定价/计费模式.md
+++ b/intl.zh-CN/产品定价/计费模式.md
@@ -2,10 +2,6 @@
 
 云盾云安全中心**高级版**和**企业版**使用包年包月的计费模式。
 
-## 付费方式 {#section_gbn_fbc_zdb .section}
-
-预付费。
-
 ## 计费周期 {#section_hbn_fbc_zdb .section}
 
 自您购买当日起计算，至您所购买实例到期之日。
@@ -23,11 +19,11 @@
 
 ## 相关文档 {#section_4tp_rz1_0m7 .section}
 
--   [购买云安全中心](../../../../intl.zh-CN/产品定价/购买云安全中心.md#)
--   [服务续费与升级](../../../../intl.zh-CN/产品定价/服务续费与升级.md#)
--   [联通沃云购买企业版失败](../../../../intl.zh-CN/常见问题/常见问题隐藏目录/联通沃云购买企业版失败.md#)
--   [如何降低产品配置？](../../../../intl.zh-CN/常见问题/常见问题隐藏目录/如何降低产品配置？.md#)
--   [软件漏洞功能收费说明](../../../../intl.zh-CN/常见问题/常见问题隐藏目录/软件漏洞功能收费说明.md#)
--   [云安全中心提示即将到期续费如何处理？](../../../../intl.zh-CN/常见问题/常见问题隐藏目录/云安全中心提示即将到期续费如何处理？.md#)
--   [云安全中心服务器超出授权数量该如何处理？](../../../../intl.zh-CN/常见问题/常见问题隐藏目录/云安全中心服务器超出授权数量该如何处理？.md#)
+-   [购买云安全中心](intl.zh-CN/产品定价/购买云安全中心.md#)
+-   [服务续费与升级](intl.zh-CN/产品定价/服务续费与升级.md#)
+-   [联通沃云购买企业版失败](../../../../intl.zh-CN/常见问题/常见问题隐藏目录/购买、续费相关问题/联通沃云购买企业版失败.md#)
+-   [如何降低产品配置？](../../../../intl.zh-CN/常见问题/常见问题隐藏目录/购买、续费相关问题/如何降低产品配置？.md#)
+-   [软件漏洞功能收费说明](../../../../intl.zh-CN/常见问题/常见问题隐藏目录/漏洞相关问题/软件漏洞功能说明.md#)
+-   [云安全中心提示即将到期续费如何处理？](../../../../intl.zh-CN/常见问题/常见问题隐藏目录/购买、续费相关问题/云安全中心提示即将到期续费如何处理？.md#)
+-   [云安全中心服务器超出授权数量该如何处理？](../../../../intl.zh-CN/常见问题/常见问题隐藏目录/购买、续费相关问题/云安全中心服务器超出授权数量该如何处理？.md#)
 
