--- a/intl.zh-CN/控制台总览/总览.md
+++ b/intl.zh-CN/控制台总览/总览.md
@@ -4,13 +4,13 @@
 
 您可在**总览**页面查看您资产的安全概览信息和进行相关操作。
 
-![总览](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15448/156802339349837_zh-CN.png)
+![总览](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15448/156873362949837_zh-CN.png)
 
 **总览**页面展示以下模块：
 
 -   **升级、续费**：云安全中心的版本信息，提供**升级**高级版、企业版、扩充资产规模和**续费**操作。
 
-    ![升级续费](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15448/156802339348508_zh-CN.png)
+    ![升级续费](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15448/156873363048508_zh-CN.png)
 
 -   **安全评分**：您资产的安全分值以及受保护/未受保护资产数量。具体评分分值参见[安全分值表](#section_jxm_rrk_wfb)。
 
@@ -21,46 +21,46 @@
     -   基线检查
     -   云平台配置检查（云产品安全风险项）
     -   攻击事件等其他风险或威胁
-    ![安全评分](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15448/156802339359402_zh-CN.png)
+    ![安全评分](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15448/156873363059402_zh-CN.png)
 
 -   **资产状态**：查看您已安装和未安装Agent插件的资产数量，即已在云安全中心防护范围内的资产和还未受云安全中心防护的资产数量；查看存在风险资产总数量；分别查看存在风险的服务器、网站、云产品数量。
 
-    ![资产状态](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15448/156802339348509_zh-CN.png)
+    ![资产状态](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15448/156873363048509_zh-CN.png)
 
     单击**未防护资产**下的**安装Agent**，可以跳转到安装/卸载插件页面，您可以将未受保护的资产接入云安全中心的安全防护内。有关Agent安装的详细操作，参见[安装Agent](../../../../intl.zh-CN/接入云安全中心/安装Agent.md#)。
 
 -   **安全检测及防御能力**：提供安全防御引擎、日志容量、病毒库更新时间、系统漏洞扫描时间、精准防御数量和网页防篡改数量等相关信息，帮助您实时掌握安全防御情况，了解资产安全状态。
 
-    ![安全防御](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15448/156802339359414_zh-CN.png)
+    ![安全防御](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15448/156873363059414_zh-CN.png)
 
 -   **威胁统计**：查看威胁统计数据。
     -   **待处理告警**：显示您资产中的告警总数量和不同危险等级（紧急、可疑、提醒）告警对应的数量。单击待处理告警总数值可跳转到[安全告警处理](intl.zh-CN/威胁检测/安全告警处理/安全告警类型概述.md#)页面。
     -   **待修复漏洞**：显示您资产中还未修复的漏洞总数和不同漏洞风险等级对应的数量。单击待修复漏洞的总数量可跳转到漏洞修复页面。详见[漏洞修复必要性说明](../../../../intl.zh-CN/安全防范/漏洞修复/漏洞修复必要性说明.md#)。
     -   **基线问题**：显示您资产中存在的基线风险总数量和不同危险等级的基线风险对应的数量。单击基线问题总数值可跳转到[基线检查](intl.zh-CN/安全防范/基线检查/基线检查概述.md#)页面。
     -   **攻击次数**：显示您资产受到攻击的总次数。单击攻击总次数可跳转到[攻击分析](intl.zh-CN/威胁检测/攻击分析.md#)页面。
--   **云平台配置风险**：检测到的云产品基线配置存在的风险。单击**查看全部**可跳转到云平台配置检查页面。详细操作参见[云平台配置检查](intl.zh-CN/安全防范/云平台配置检查.md#)。
+-   **云平台配置风险**：检测到的云产品基线配置存在的风险。单击**查看全部**可跳转到云平台配置检查页面。详细操作参见[云平台配置检查](../../../../intl.zh-CN/安全防范/云平台配置检查.md#)。
 -   **安全运营**：展示15天内已处理的告警、漏洞、基线配置数量柱状图和趋势图。
 
 ## 升级企业版、扩充资产规模、续费 {#section_wqz_1zk_wfb .section}
 
-云安全中心支持基础版、高级版和企业版，您可在**总览**页面右上角查看云安全中心的版本信息。基础版、高级版和企业版支持的功能参见[功能特性](intl.zh-CN/产品简介/功能特性.md#)。
+云安全中心支持基础版、高级版和企业版，您可在**总览**页面右上角查看云安全中心的版本信息。基础版、高级版和企业版支持的功能参见[功能特性](../../../../intl.zh-CN/产品简介/功能特性.md#)。
 
 -   **基础版**：页面右上角显示云安全中心的版本信息和**购买**按钮。升级到高级版或企业版后可使用基线检查、资产指纹、恶意进程（云查杀）、日志分析等高级功能。
 -   **高级版/企业版**：页面右上角显示云安全中心的到期日期和资产规模（服务器台数），并提供**升级**和**续费**操作按钮。
 
     **说明：** 如果当前服务器数量超过购买服务时配置的服务器数量，页面右上角会出现**扩充资产规模**操作按钮，提示您尽快扩充资产规模。
 
-    ![高级版/企业版](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15448/156802339453784_zh-CN.png)
+    ![高级版/企业版](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15448/156873363053784_zh-CN.png)
 
 
 ## 安全分值表 {#section_jxm_rrk_wfb .section}
 
-|安全分值|分值说明|
-|----|----|
-|95-100|恭喜您，您的资产当前安全隐患较少，建议您及时关注安全。|
-|85-94|您的资产检测出多条安全风险，已经存在安全隐患，可被黑客利用入侵主机，请您尽快处理。|
-|70-84|您的资产存检测出多条安全风险，已经存在安全隐患，可被黑客利用入侵主机，请您尽快处理。|
-|69分以下|您的资产检测出多条安全风险，已经暴露在黑客入侵和病毒感染的威胁下，请您尽快处理。|
+|安全分值|分值说明|字体颜色|
+|----|----|----|
+|95-100|恭喜，您的资产安全状态良好。|绿色|
+|85-94|您的资产存在安全隐患，建议您尽快加固安全防护体系。|黄色|
+|70-84|您的资产存在较多安全隐患，建议您及时加固安全防护体系。|黄色|
+|69分以下|您的资产防御黑客入侵的能力很弱，建议您尽快加固安全防护体系。|红色|
 
 ## 安全评分扣分项目表 {#section_i9g_7hm_qci .section}
 
