--- a/cn.zh-CN/常见问题/云安全中心常见问题概览.md
+++ b/cn.zh-CN/常见问题/云安全中心常见问题概览.md
@@ -2,157 +2,163 @@
 
 本文档介绍了阿里云云安全中心各类常见问题和对应的解决方案。
 
+## 新功能动态 {#section_5sb_s9v_148 .section}
+
+[新功能发布记录](../../../../cn.zh-CN/新功能发布记录/新功能发布记录.md#)
+
+[安骑士、态势感知和云安全中心的区别](cn.zh-CN/常见问题/常见问题隐藏目录/新功能动态相关问题/安骑士、态势感知和云安全中心的区别.md#)
+
 ## 购买、续费相关问题 {#section_vqr_ejj_rmh .section}
 
-[如何降低产品配置？](intl.zh-CN//如何降低产品配置？.md#)
+[如何降低产品配置？](cn.zh-CN/常见问题/常见问题隐藏目录/购买、续费相关问题/如何降低产品配置？.md#)
 
-[联通沃云购买企业版失败](intl.zh-CN//联通沃云购买企业版失败.md#)
+[联通沃云购买企业版失败](cn.zh-CN/常见问题/常见问题隐藏目录/购买、续费相关问题/联通沃云购买企业版失败.md#)
 
-[云安全中心提示即将到期续费如何处理？](intl.zh-CN//云安全中心提示即将到期续费如何处理？.md#)
+[云安全中心提示即将到期续费如何处理？](cn.zh-CN/常见问题/常见问题隐藏目录/购买、续费相关问题/云安全中心提示即将到期续费如何处理？.md#)
 
-[云安全中心服务器超出授权数量该如何处理？](intl.zh-CN//云安全中心服务器超出授权数量该如何处理？.md#)
+[云安全中心服务器超出授权数量该如何处理？](cn.zh-CN/常见问题/常见问题隐藏目录/购买、续费相关问题/云安全中心服务器超出授权数量该如何处理？.md#)
 
 ## 权限相关问题 {#section_xwi_c6l_ede .section}
 
-[安骑士跳转到云安全中心是否需要授权？](intl.zh-CN//安骑士跳转到云安全中心是否需要授权？.md#)
+[安骑士跳转到云安全中心是否需要授权？](cn.zh-CN/常见问题/常见问题隐藏目录/权限相关问题/安骑士跳转到云安全中心是否需要授权？.md#)
 
-[子账户登录提示当前操作未授权FAQ](intl.zh-CN//子账户登录提示当前操作未授权FAQ.md#)
+[子账户登录提示当前操作未授权FAQ](cn.zh-CN/常见问题/常见问题隐藏目录/权限相关问题/子账户登录提示当前操作未授权FAQ.md#)
 
 ## 安装、卸载相关问题 {#section_ymh_u9c_vbp .section}
 
-[Agent一键安装失败怎么办？](intl.zh-CN//Agent一键安装失败怎么办？.md#)
+[Agent一键安装失败怎么办？](cn.zh-CN/常见问题/常见问题隐藏目录/安装、卸载相关问题/Agent一键安装失败怎么办？.md#)
 
-[在ECS Linux系统服务器中安装Agent时，收到“Permission denied”的错误提示，应该如何处理？](intl.zh-CN//在ECS Linux系统服务器中安装Agent时，收到“Permission denied”的错误提示，应该如何处理？.md#)
+[在ECS Linux系统服务器中安装Agent时，收到“Permission denied”的错误提示，应该如何处理？](cn.zh-CN/常见问题/常见问题隐藏目录/安装、卸载相关问题/在ECS Linux系统服务器中安装Agent时，收到“Permission denied”的错误提示，应该如何处理？.md#)
 
-[如何查看云安全中心Agent的日志？](intl.zh-CN//如何查看云安全中心Agent的日志？.md#)
+[如何查看云安全中心Agent的日志？](cn.zh-CN/常见问题/常见问题隐藏目录/日志相关问题/如何查看云安全中心Agent的日志？.md#)
 
-[金融云、VPC用户安装Agent](../../../../intl.zh-CN/接入云安全中心/金融云和VPC用户安装Agent.md#)
+[金融云、VPC用户安装Agent](../../../../cn.zh-CN/接入云安全中心/金融云和VPC用户安装Agent.md#)
 
-[如何在非阿里云服务器上使用云安全中心？](intl.zh-CN//如何在非阿里云服务器上使用云安全中心？.md#)
+[如何在非阿里云服务器上使用云安全中心？](cn.zh-CN/常见问题/常见问题隐藏目录/安装、卸载相关问题/如何在非阿里云服务器上使用云安全中心？.md#)
 
-[如何在镜像中安装云安全中心？](intl.zh-CN//如何在镜像中安装云安全中心？.md#)
+[如何在镜像中安装云安全中心？](cn.zh-CN/常见问题/常见问题隐藏目录/安装、卸载相关问题/如何在镜像中安装云安全中心？.md#)
 
-[虚拟机和轻量级服务器是否支持安装Agent？](intl.zh-CN//虚拟机和轻量级服务器是否支持安装Agent？.md#)
+[虚拟机和轻量级服务器是否支持安装Agent？](cn.zh-CN/常见问题/常见问题隐藏目录/安装、卸载相关问题/虚拟机和轻量级服务器是否支持安装Agent？.md#)
 
-[如何解绑（释放）资产？](intl.zh-CN//如何解绑（释放）非阿里云资产？.md#)
+[如何解绑（释放）资产？](cn.zh-CN/常见问题/常见问题隐藏目录/其他使用问题/如何解绑（释放）非阿里云资产？.md#)
 
 ## 主机异常相关问题 {#section_5am_kp7_l50 .section}
 
 [ECS Linux 系统 CPU 异常占用：minerd 、tplink 等挖矿进程](https://www.alibabacloud.com/help/zh/faq-detail/41206.html?spm=a2c5t.10695662.1996646101.searchclickresult.760b4552WFMhAQ)
 
-[在ECS中对云安全中心服务端地址进行加白](intl.zh-CN//在ECS中对云安全中心服务端地址进行加白.md#)
+[在ECS中对云安全中心服务端地址进行加白](cn.zh-CN/常见问题/常见问题隐藏目录/主机异常相关问题/在ECS中对云安全中心服务端地址进行加白.md#)
 
-[云服务器 ECS 中病毒或被木马入侵了怎么办](../../../../intl.zh-CN/故障排查/操作运维 Windows/病毒安全/云服务器 ECS 中病毒或被木马入侵了怎么办.md#)
+[云服务器 ECS 中病毒或被木马入侵了怎么办](../../../../cn.zh-CN/故障排查/操作运维 Windows/病毒安全/云服务器 ECS 中病毒或被木马入侵了怎么办.md#)
 
 ## 网站异常相关问题 {#section_tn8_iv0_03i .section}
 
-[使用云安全中心后，网站被黑客入侵的排查步骤](intl.zh-CN//使用云安全中心后，网站被黑客入侵的排查步骤.md#)
+[使用云安全中心后，网站被黑客入侵的排查步骤](cn.zh-CN/常见问题/常见问题隐藏目录/网站异常相关问题/使用云安全中心后，网站被黑客入侵的排查步骤.md#)
 
-[如何预防网站被挂马、从而导致网站被封?](intl.zh-CN//如何预防网站被挂马、从而导致网站被封?.md#)
+[如何预防网站被挂马、从而导致网站被封?](cn.zh-CN/常见问题/常见问题隐藏目录/网站异常相关问题/如何预防网站被挂马、从而导致网站被封?.md#)
 
 ## 安全告警相关问题 {#section_q25_5b6_xyk .section}
 
-[如何获知我的服务器是否存在安全威胁？](intl.zh-CN//如何获知我的服务器是否存在安全威胁？.md#)
+[如何获知我的服务器是否存在安全威胁？](cn.zh-CN/常见问题/常见问题隐藏目录/安全告警相关问题/如何获知我的服务器是否存在安全威胁？.md#)
 
-[如何查看我已开启了哪些防御能力？](intl.zh-CN//如何查看我已开启了哪些防御能力？.md#)
+[如何查看我已开启了哪些防御能力？](cn.zh-CN/常见问题/常见问题隐藏目录/安全告警相关问题/如何查看我已开启了哪些防御能力？.md#)
 
-[隔离操作适用于哪些安全告警类型？](intl.zh-CN//隔离操作适用于哪些安全告警类型？.md#)
+[隔离操作适用于哪些安全告警类型？](cn.zh-CN/常见问题/常见问题隐藏目录/安全告警相关问题/隔离操作适用于哪些安全告警类型？.md#)
 
-[如何正确处理告警误报？](intl.zh-CN//如何正确处理告警误报？.md#)
+[如何正确处理告警误报？](cn.zh-CN/常见问题/常见问题隐藏目录/安全告警相关问题/如何正确处理告警误报？.md#)
 
-[基础版用户收到通知提示发现网站后门等威胁该怎么办？](intl.zh-CN//基础版用户收到通知提示发现网站后门等威胁该怎么办？.md#)
+[基础版用户收到通知提示发现网站后门等威胁该怎么办？](cn.zh-CN/常见问题/常见问题隐藏目录/安全告警相关问题/基础版用户收到通知提示发现网站后门等威胁该怎么办？.md#)
 
-[如何在云安全中心找到网站后门检测的功能？](intl.zh-CN//如何在云安全中心找到网站后门检测的功能？.md#)
+[如何在云安全中心找到网站后门检测的功能？](cn.zh-CN/常见问题/常见问题隐藏目录/安全告警相关问题/如何在云安全中心找到网站后门检测的功能？.md#)
 
-[哪些类型的异常支持自动查杀而无需手动处理？](intl.zh-CN//哪些类型的异常支持自动查杀而无需手动处理？.md#)
+[哪些类型的异常支持自动查杀而无需手动处理？](cn.zh-CN/常见问题/常见问题隐藏目录/安全告警相关问题/哪些类型的异常支持自动查杀而无需手动处理？.md#)
 
-[安全告警FAQ](intl.zh-CN//安全告警FAQ.md#)
+[安全告警FAQ](cn.zh-CN/常见问题/常见问题隐藏目录/安全告警相关问题/安全告警FAQ.md#)
 
-[云安全中心提示“异常网络连接-主动连接恶意下载源”该如何处理？](intl.zh-CN//云安全中心提示“异常网络连接-主动连接恶意下载源”该如何处理？.md#)
+[云安全中心提示“异常网络连接-主动连接恶意下载源”该如何处理？](cn.zh-CN/常见问题/常见问题隐藏目录/安全告警相关问题/云安全中心提示“异常网络连接-主动连接恶意下载源”该如何处理？.md#)
 
-[云安全中心提示“异常网络链接-访问恶意域名”该如何处理？](intl.zh-CN//云安全中心提示“异常网络链接-访问恶意域名”该如何处理？.md#)
+[云安全中心提示“异常网络链接-访问恶意域名”该如何处理？](cn.zh-CN/常见问题/常见问题隐藏目录/安全告警相关问题/云安全中心提示“异常网络链接-访问恶意域名”该如何处理？.md#)
 
-[云安全中心如何检测和告警异常登录？](intl.zh-CN//云安全中心如何检测和告警异常登录？.md#)
+[云安全中心如何检测和告警异常登录？](cn.zh-CN/常见问题/常见问题隐藏目录/异常登录相关问题/云安全中心如何检测和告警异常登录？.md#)
 
 ## 异常登录相关问题 {#section_dpg_5gj_ygx .section}
 
-[被暴力破解成功之后该怎么办？](intl.zh-CN//被暴力破解成功之后该怎么办？.md#)
+[被暴力破解成功之后该怎么办？](cn.zh-CN/常见问题/常见问题隐藏目录/安全告警相关问题/被暴力破解成功之后该怎么办？.md#)
 
-[升级RDP登录配置以应用暴力破解拦截功能](intl.zh-CN//升级RDP登录配置以应用暴力破解拦截功能.md#)
+[升级RDP登录配置以应用暴力破解拦截功能](cn.zh-CN/常见问题/常见问题隐藏目录/异常登录相关问题/升级RDP登录配置以应用暴力破解拦截功能.md#)
 
-[如何在Windows2012中查看登录失败的用户名？](intl.zh-CN//如何在Windows2012中查看登录失败的用户名？.md#)
+[如何在Windows2012中查看登录失败的用户名？](cn.zh-CN/常见问题/常见问题隐藏目录/异常登录相关问题/如何在Windows2012中查看登录失败的用户名？.md#)
 
-[修改22端口后仍然出现密码暴力破解提示](intl.zh-CN//修改22端口后仍然出现密码暴力破解提示.md#)
+[修改22端口后仍然出现密码暴力破解提示](cn.zh-CN/常见问题/常见问题隐藏目录/异常登录相关问题/修改22端口后仍然出现密码暴力破解提示.md#)
 
 ## 网页被篡改相关问题 {#section_dkd_8di_jje .section}
 
-[短信或邮件报网站后门](intl.zh-CN//短信或邮件报网站后门.md#)
+[短信或邮件报网站后门](cn.zh-CN/常见问题/常见问题隐藏目录/网页被篡改相关问题/短信或邮件报网站后门.md#)
 
 ## 漏洞相关问题 {#section_dgw_5fy_jp3 .section}
 
-[漏洞修复失败的可能原因](intl.zh-CN/常见问题/常见问题隐藏目录/漏洞相关问题/漏洞修复失败的可能原因.md#)
+[漏洞修复失败的可能原因](cn.zh-CN/常见问题/常见问题隐藏目录/漏洞相关问题/漏洞修复失败的可能原因.md#)
 
-[Linux软件漏洞FAQ](intl.zh-CN/常见问题/常见问题隐藏目录/漏洞相关问题/Linux软件漏洞FAQ.md#)
+[Linux软件漏洞FAQ](cn.zh-CN/常见问题/常见问题隐藏目录/漏洞相关问题/Linux软件漏洞FAQ.md#)
 
-[系统漏洞修复FAQ](intl.zh-CN/常见问题/常见问题隐藏目录/漏洞相关问题/系统漏洞修复FAQ.md#)
+[系统漏洞修复FAQ](cn.zh-CN/常见问题/常见问题隐藏目录/漏洞相关问题/系统漏洞修复FAQ.md#)
 
-[Linux软件漏洞各参数说明](intl.zh-CN/常见问题/常见问题隐藏目录/漏洞相关问题/Linux软件漏洞各参数说明.md#)
+[Linux软件漏洞各参数说明](cn.zh-CN/常见问题/常见问题隐藏目录/漏洞相关问题/Linux软件漏洞各参数说明.md#)
 
-[Linux软件漏洞修复命令为空](intl.zh-CN/常见问题/常见问题隐藏目录/漏洞相关问题/Linux软件漏洞修复命令为空.md#)
+[Linux软件漏洞修复命令为空](cn.zh-CN/常见问题/常见问题隐藏目录/漏洞相关问题/Linux软件漏洞修复命令为空.md#)
 
-[如何手动检测系统软件漏洞？](intl.zh-CN/常见问题/常见问题隐藏目录/漏洞相关问题/如何手动检测系统软件漏洞？.md#)
+[如何手动检测系统软件漏洞？](cn.zh-CN/常见问题/常见问题隐藏目录/漏洞相关问题/如何手动检测系统软件漏洞？.md#)
 
-[漏洞修复后手动验证没有反应](intl.zh-CN/常见问题/常见问题隐藏目录/漏洞相关问题/漏洞修复后手动验证没有反应.md#)
+[漏洞修复后手动验证没有反应](cn.zh-CN/常见问题/常见问题隐藏目录/漏洞相关问题/漏洞修复后手动验证没有反应.md#)
 
-[排查云安全中心无法验证系统漏洞修复的问题](intl.zh-CN/常见问题/常见问题隐藏目录/漏洞相关问题/排查云安全中心无法验证系统漏洞修复的问题.md#)
+[排查云安全中心无法验证系统漏洞修复的问题](cn.zh-CN/常见问题/常见问题隐藏目录/漏洞相关问题/排查云安全中心无法验证系统漏洞修复的问题.md#)
 
-[漏洞修复优先级排序参考](../../../../intl.zh-CN/安全防范/漏洞修复/漏洞修复优先级排序参考.md#)
+[漏洞修复优先级排序参考](../../../../cn.zh-CN/安全防范/漏洞修复/漏洞修复优先级排序参考.md#)
 
-[软件漏洞功能收费说明](intl.zh-CN/常见问题/常见问题隐藏目录/漏洞相关问题/软件漏洞功能说明.md#)
+[软件漏洞功能收费说明](cn.zh-CN/常见问题/常见问题隐藏目录/漏洞相关问题/软件漏洞功能说明.md#)
 
-[漏洞扫描周期说明](intl.zh-CN/常见问题/常见问题隐藏目录/漏洞相关问题/漏洞扫描周期说明.md#)
+[漏洞扫描周期说明](cn.zh-CN/常见问题/常见问题隐藏目录/漏洞相关问题/漏洞扫描周期说明.md#)
 
-[服务器软件漏洞修复最佳实践](intl.zh-CN/常见问题/常见问题隐藏目录/漏洞相关问题/服务器软件漏洞修复最佳实践.md#)
+[服务器软件漏洞修复最佳实践](cn.zh-CN/常见问题/常见问题隐藏目录/漏洞相关问题/服务器软件漏洞修复最佳实践.md#)
 
-[漏洞扫描FAQ](intl.zh-CN/常见问题/常见问题隐藏目录/漏洞相关问题/漏洞扫描FAQ.md#)
+[漏洞扫描FAQ](cn.zh-CN/常见问题/常见问题隐藏目录/漏洞相关问题/漏洞扫描FAQ.md#)
 
-[Wget缓冲区溢出漏洞检测命中规则说明](intl.zh-CN/常见问题/常见问题隐藏目录/漏洞相关问题/Wget缓冲区溢出漏洞检测命中规则说明.md#)
+[Wget缓冲区溢出漏洞检测命中规则说明](cn.zh-CN/常见问题/常见问题隐藏目录/漏洞相关问题/Wget缓冲区溢出漏洞检测命中规则说明.md#)
 
-[为什么我在控制台里看不到漏洞或指定设备的漏洞？](intl.zh-CN/常见问题/常见问题隐藏目录/漏洞相关问题/为什么我在控制台里看不到漏洞或指定设备的漏洞？.md#)
+[为什么我在控制台里看不到漏洞或指定设备的漏洞？](cn.zh-CN/常见问题/常见问题隐藏目录/漏洞相关问题/为什么我在控制台里看不到漏洞或指定设备的漏洞？.md#)
 
-[漏洞修复完成后我还需要做什么？](intl.zh-CN/常见问题/常见问题隐藏目录/漏洞相关问题/漏洞修复完成后我还需要做什么？.md#)
+[漏洞修复完成后我还需要做什么？](cn.zh-CN/常见问题/常见问题隐藏目录/漏洞相关问题/漏洞修复完成后我还需要做什么？.md#)
 
-[Windows系统漏洞FAQ](intl.zh-CN/常见问题/常见问题隐藏目录/漏洞相关问题/Windows系统漏洞FAQ.md#)
+[Windows系统漏洞FAQ](cn.zh-CN/常见问题/常见问题隐藏目录/漏洞相关问题/Windows系统漏洞FAQ.md#)
 
-[云安全中心报告应急漏洞该如何处理？](intl.zh-CN/常见问题/常见问题隐藏目录/漏洞相关问题/云安全中心报告应急漏洞该如何处理？.md#)
+[云安全中心报告应急漏洞该如何处理？](cn.zh-CN/常见问题/常见问题隐藏目录/漏洞相关问题/云安全中心报告应急漏洞该如何处理？.md#)
 
-[Ubuntu 内核补丁漏洞修复FAQ](intl.zh-CN/常见问题/常见问题隐藏目录/漏洞相关问题/Ubuntu 内核补丁漏洞修复FAQ.md#)
+[Ubuntu 内核补丁漏洞修复FAQ](cn.zh-CN/常见问题/常见问题隐藏目录/漏洞相关问题/Ubuntu 内核补丁漏洞修复FAQ.md#)
 
-[云安全中心是否支持Elasticsearch漏洞检测？](intl.zh-CN/常见问题/常见问题隐藏目录/漏洞相关问题/云安全中心是否支持Elasticsearch漏洞检测？.md#)
+[云安全中心是否支持Elasticsearch漏洞检测？](cn.zh-CN/常见问题/常见问题隐藏目录/漏洞相关问题/云安全中心是否支持Elasticsearch漏洞检测？.md#)
 
-[Windows漏洞修复时出现0x80240017 104 （Patch Not Applicable）报错](intl.zh-CN/常见问题/常见问题隐藏目录/漏洞相关问题/Windows漏洞修复时出现0x80240017 104 （Patch Not Applicable）报错.md#)
+[Windows漏洞修复时出现0x80240017 104 （Patch Not Applicable）报错](cn.zh-CN/常见问题/常见问题隐藏目录/漏洞相关问题/Windows漏洞修复时出现0x80240017 104 （Patch Not Applicable）报错.md#)
 
 ## 基线相关问题 {#section_s9l_3an_gwn .section}
 
-[基线检查风险项修复建议](intl.zh-CN//基线检查风险项修复建议.md#)
+[基线检查风险项修复建议](cn.zh-CN/常见问题/常见问题隐藏目录/基线相关问题/基线检查风险项修复建议.md#)
 
-[基线检查验证失败如何处理？](intl.zh-CN//基线检查验证失败如何处理？.md#)
+[基线检查验证失败如何处理？](cn.zh-CN/常见问题/常见问题隐藏目录/基线相关问题/基线检查验证失败如何处理？.md#)
 
-[基线核查FAQ](intl.zh-CN//基线核查FAQ.md#)
+[基线核查FAQ](cn.zh-CN/常见问题/常见问题隐藏目录/基线相关问题/基线核查FAQ.md#)
 
 ## 日志相关问题 {#section_fmb_l6r_1pm .section}
 
-[查看云安全中心Aegis的日志](intl.zh-CN//查看云安全中心Aegis的日志.md#)
+[如何查看云安全中心Agent的日志？](cn.zh-CN/常见问题/常见问题隐藏目录/日志相关问题/如何查看云安全中心Agent的日志？.md#)
 
 ## AK和账密泄露相关问题 {#section_d5x_iij_cns .section}
 
-[高危敏感信息泄露处置方案](intl.zh-CN//高危敏感信息泄露处置方案.md#)
+[高危敏感信息泄露处置方案](cn.zh-CN/常见问题/常见问题隐藏目录/AK和账密泄露相关问题/高危敏感信息泄露处置方案.md#)
 
 ## 其他使用问题 {#section_x04_cz8_fvl .section}
 
-[云安全中心检测范围说明](intl.zh-CN//云安全中心检测范围说明.md#)
+[云安全中心检测范围说明](cn.zh-CN/常见问题/常见问题隐藏目录/其他使用问题/云安全中心检测范围说明.md#)
 
-[云安全中心控制台提示“token校验失败”](intl.zh-CN//云安全中心控制台提示“token校验失败”.md#)
+[云安全中心控制台提示“token校验失败”](cn.zh-CN/常见问题/常见问题隐藏目录/其他使用问题/云安全中心控制台提示“token校验失败”.md#)
 
-[浏览器打开控制台出现兼容性问题如何处理？](intl.zh-CN//浏览器打开控制台出现兼容性问题如何处理？.md#)
+[浏览器打开控制台出现兼容性问题如何处理？](cn.zh-CN/常见问题/常见问题隐藏目录/其他使用问题/浏览器打开控制台出现兼容性问题如何处理？.md#)
 
