--- a/intl.zh-CN/威胁检测/安全告警处理/告警自动化关联分析.md
+++ b/intl.zh-CN/威胁检测/安全告警处理/告警自动化关联分析.md
@@ -7,26 +7,27 @@
 -   告警自动关联分析功能可对相关的异常事件进行实时自动化关联，挖掘出潜藏的入侵威胁。
 -   告警自动化关联以告警发生的时间顺序聚合成关联的告警，帮助您更便捷地分析和处理告警事件，提升您系统的应急响应机制。
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/78656/156629406756619_zh-CN.png)
+![关联异常](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/78656/156878886556619_zh-CN.png)
 
 ## 操作步骤 {#section_g2v_wdx_bgb .section}
 
 1.  登录[云安全中心控制台](https://yundun.console.aliyun.com/?p=sas)。
 2.  在左侧导航栏，单击**威胁检测** \> **安全告警处理**。
 3.  在**安全告警处理**列表中，单击目标告警事件名称打开告警事件详情页面。
-4.  在告警事件详情页面查看告警事件的详细信息、关联的异常事件和对告警/异常事件进行处理。 
+4.  在告警事件详情页面，查看告警事件的详细信息、关联的异常事件和对告警/异常事件进行处理。 
     -   查看告警详细信息：您可查看受该告警事件影响的资产信息、告警开始/结束时间、关联异常事件的详情。
 
-        ![详细信息](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/78656/156629406751009_zh-CN.png)
+        ![详细信息](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/78656/156878886551009_zh-CN.png)
 
-    -   查看受影响资产：单击**受影响资产**名称可跳转到对应资产的详情页面，方便您集中查看该资产的全部告警信息、漏洞信息、基线检查漏洞和资产指纹等信息。
+    -   查看受影响资产：单击**受影响资产**名称，可跳转到对应资产的详情页面，方便您集中查看该资产的全部告警信息、漏洞信息、基线检查漏洞和资产指纹等信息。
 
-        ![影响资产](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/78656/156629406851007_zh-CN.png)
+        ![影响资产](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/78656/156878886551007_zh-CN.png)
 
     -   查看和处理**关联异常**：您可在**关联异常**区域查看该告警事件关联的所有异常情况的详细信息、建议处理方案和处理方式。
 
-        告警事件处理方式选择，具体可参见[查看和处理告警事件](intl.zh-CN/威胁检测/安全告警处理/查看和处理告警事件.md#)。
+        告警事件处理方式选择，具体可参见[查看和处理告警事件](cn.zh-CN/威胁检测/安全告警处理/查看和处理告警事件.md#)。
 
-        ![关联异常](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/78656/156629406851006_zh-CN.png)
+        ![关联异常](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/78656/156878886551006_zh-CN.png)
 
+    -   查看告警**溯源**：单击**溯源**，会打开该告警事件的溯源页面，详情请参见[查看告警溯源和排查方案](cn.zh-CN/威胁检测/安全告警处理/查看告警溯源和排查方案.md#)。
 
