--- a/intl.zh-CN/产品定价/计费模式.md
+++ b/intl.zh-CN/产品定价/计费模式.md
@@ -14,16 +14,22 @@
 
 **说明：** 
 
--   资产规模指加入保护的服务器总数，包括ECS服务器和非阿里云服务器；默认值是当前账号拥有的ECS实例总数，您在[购买云安全中心](intl.zh-CN/产品定价/购买云安全中心.md#)时指定的资产规模不能小于已拥有的ECS实例总数。
+-   资产规模指加入保护的服务器总数，包括ECS服务器和非阿里云服务器；默认值是当前账号拥有的ECS实例总数，您在[购买云安全中心](cn.zh-CN/产品定价/购买云安全中心.md#)时指定的资产规模不能小于已拥有的ECS实例总数。
 -   云安全中心支持防护的资产类型除了ECS服务器和非阿里云服务器，还包括负载均衡实例和NAT网关，但后两者不计费。
+
+## 折扣优惠 {#section_jbn_fbc_zdb .section}
+
+一次性购买一年以上时长的云安全中心企业版服务，均可享受8.5折优惠。
+
+更多折扣信息，请关注阿里云官网活动。
 
 ## 相关文档 {#section_4tp_rz1_0m7 .section}
 
--   [购买云安全中心](intl.zh-CN/产品定价/购买云安全中心.md#)
--   [服务续费与升级](intl.zh-CN/产品定价/服务续费与升级.md#)
--   [联通沃云购买企业版失败](../../../../intl.zh-CN/常见问题/常见问题隐藏目录/购买、续费相关问题/联通沃云购买企业版失败.md#)
--   [如何降低产品配置？](../../../../intl.zh-CN/常见问题/常见问题隐藏目录/购买、续费相关问题/如何降低产品配置？.md#)
--   [软件漏洞功能收费说明](../../../../intl.zh-CN/常见问题/常见问题隐藏目录/漏洞相关问题/软件漏洞功能说明.md#)
--   [云安全中心提示即将到期续费如何处理？](../../../../intl.zh-CN/常见问题/常见问题隐藏目录/购买、续费相关问题/云安全中心提示即将到期续费如何处理？.md#)
--   [云安全中心服务器超出授权数量该如何处理？](../../../../intl.zh-CN/常见问题/常见问题隐藏目录/购买、续费相关问题/云安全中心服务器超出授权数量该如何处理？.md#)
+-   [购买云安全中心](cn.zh-CN/产品定价/购买云安全中心.md#)
+-   [服务续费与升级](cn.zh-CN/产品定价/服务续费与升级.md#)
+-   [联通沃云购买企业版失败](../../../../cn.zh-CN/常见问题/常见问题隐藏目录/购买、续费相关问题/联通沃云购买企业版失败.md#)
+-   [如何降低产品配置？](../../../../cn.zh-CN/常见问题/常见问题隐藏目录/购买、续费相关问题/如何降低产品配置？.md#)
+-   [软件漏洞功能收费说明](../../../../cn.zh-CN/常见问题/常见问题隐藏目录/漏洞相关问题/软件漏洞功能说明.md#)
+-   [云安全中心提示即将到期续费如何处理？](../../../../cn.zh-CN/常见问题/常见问题隐藏目录/购买、续费相关问题/云安全中心提示即将到期续费如何处理？.md#)
+-   [云安全中心服务器超出授权数量该如何处理？](../../../../cn.zh-CN/常见问题/常见问题隐藏目录/购买、续费相关问题/云安全中心服务器超出授权数量该如何处理？.md#)
 
